# compound-streamlit

./: README.md  main.py  output.txt  pyproject.toml
tests/: test_compound.py
utils/: compound_interest.py
